[package]
name = "dehazing"
version = "0.1.1"
edition = "2024"
authors = ["kingzcheung <kingzcheung@gmail.com>"]
description = "A simple dehazing algorithm"
repository = "https://github.com/ximeiorg/dehazing"
license = "MIT"
keywords = ["dehazing","image","vision"]

[dependencies]
candle-core = {version = "0.9.1",optional = true}
candle-nn = {version = "0.9.1" ,optional = true}
image = "0.25.6"


[features]
default = ["cpu"]
cpu = ["candle-core","candle-nn"]
cuda = ["candle-core/cuda","candle-nn/cuda"]
metal = ["candle-core/metal","candle-nn/metal"]