[project]
name = "dehazing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "safetensors>=0.5.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
